--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Pagina-web, Html5, Css3 Javascript">
+    <meta name="description" content="Pagina Responsive NFT">
+    <link rel="icon" href="assets/Logo.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="Css/style.css">
     <title>Responsive NFT Website</title>
@@ -10,7 +13,7 @@
 <body>
     <nav>
         <a href="#" class="logo">Arcus</a>
-        <div class="links hideMenu">
+        <div class="links">
             <a href="#">Home</a>
             <a href="#">Features</a>
             <a href="#">Blog</a>
@@ -20,6 +23,7 @@
             <button class="signup">Get Started</button>
             <button>Login</button>
             <i class='bx bx-menu'></i>
+            <i class='bx bx-x close'></i>
         </div>
     </nav>
     <header>
@@ -33,7 +37,10 @@
                 <span>Buy Now</span>
             </a>
         </div>
-        <img src="assets/header.png" alt="">
+        <picture type="image/webp">
+            <source srcset="assets/header.webp" >
+            <img src="assets/header.png" alt="El Imagen header de la pagina" loading="lazy">
+        </picture>
     </header>
     <h2 class="separator">
         Sell Your NTFs
@@ -80,7 +87,10 @@
         </div>
         <div class="nft-list">
             <div class="item">
-                <img src="assets/item-1.png" alt="">
+                <picture type="image/webp">
+                    <source srcset="assets/item-1.webp">
+                    <img src="assets/item-1.png" alt="Imagen item 1" loading="lazy">
+                </picture>
                 <div class="info">
                     <div>
                         <h5>CryptoArt</h5>
@@ -97,7 +107,10 @@
                 </div>
             </div>
             <div class="item">
-                <img src="assets/item-2.png" alt="">
+                <picture type="image/webp">
+                    <source srcset="assets/item-2.webp">
+                    <img src="assets/item-2.png" alt="Imagen item 2" loading="lazy">
+                </picture>
                 <div class="info">
                     <div>
                         <h5>Abs-Art</h5>
@@ -114,7 +127,10 @@
                 </div>
             </div>
             <div class="item">
-                <img src="assets/item-3.png" alt="">
+                <picture type="image/webp">
+                    <source srcset="assets/item-3.webp">
+                    <img src="assets/item-3.png" alt="Imagen item 3" loading="lazy">
+                </picture>
                 <div class="info">
                     <div>
                         <h5>TestArt</h5>
@@ -131,7 +147,10 @@
                 </div>
             </div>
             <div class="item">
-                <img src="assets/item-4.png" alt="">
+                <picture type="image/webp">
+                    <source srcset="assets/item-4.webp">
+                    <img src="assets/item-4.png" alt="Imagen item 4" loading="lazy">
+                </picture>
                 <div class="info">
                     <div>
                         <h5>Art-4</h5>
@@ -157,28 +176,40 @@
     </h2>
     <div class="sellers">
         <div class="item">
-            <img src="assets/profile-1.png">
+            <picture type="image/webp">
+                <source srcset="assets/profile-1.webp">
+                <img src="assets/profile-1.png" alt="Imagen profile 1" loading="lazy">
+            </picture>
             <div class="info">
                 <h4>Jhone D</h4>
                 <p>15.2k</p>
             </div>
         </div>
         <div class="item">
-            <img src="assets/profile-2.png">
+            <picture type="image/webp">
+                <source srcset="assets/profile-2.webp">
+                <img src="assets/profile-2.png" alt="Imagen profile 2" loading="lazy">
+            </picture>
             <div class="info">
                 <h4>Gregory B</h4>
                 <p>12.7k</p>
             </div>
         </div>
         <div class="item">
-            <img src="assets/profile-3.png">
+            <picture type="image/webp">
+                <source srcset="assets/profile-3.webp">
+                <img src="assets/profile-3.png" alt="Imagen profile 3" loading="lazy">
+            </picture>
             <div class="info">
                 <h4>Stephen E</h4>
                 <p>7.9k</p>
             </div>
         </div>
         <div class="item">
-            <img src="assets/profile-4.png">
+            <picture type="image/webp">
+                <source srcset="assets/profile-4.webp">
+                <img src="assets/profile-4.png" alt="Imagen profile 4" loading="lazy">
+            </picture>
             <div class="info">
                 <h4>Russel M</h4>
                 <p>4.2k</p>
